static/styles/navbar.css
#navbar {
    background: #FFFFFF;
    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
    top: 0;
    left: 0;
    width: 100%;
    height: auto;
}

.nav-col:not(:nth-child(5)) {
    border: 1px solid #E5E5E5;
    box-sizing: border-box;
    border-radius: 0px;
}

.nav-link {
    font-style: normal;
    font-weight: 500;
    font-size: 24px;
    text-align: center;
    line-height: 28px;
    color: #000000;
}

.nav-col:not(:nth-child(5)):hover {
    background-color: #CC0000;
}

.nav-col:not(:nth-child(5)):hover .nav-link {
    color: white;
}
  
.dropdown-item:hover {
    background-color: #FFBBBB;
}

@media screen and (max-width: 820px) {
    .nav-link {
        display: none;
    }
    .row .nav-col {
        display: none;
        border: none;
    } .nav-col:not(:last-child):hover {
        background-color: white;
    }

    .row .burger {
        display: unset
    }
}
@media screen and (min-width: 821px) {
    .burger-content {
      display: none;
    }
  }

/* manually making a burger: */
.burger-container {
    margin-top: 25px;
    margin-right: 12px;
}

.burger {
    display: none;
    width: 45px;
    height: 45px;
    background-color: transparent;
    border: none;
}

.burger .line {
    width: 100%;
    float: left;
    height: 3px;
    background-color: black;;
    margin-bottom: 5px;
}
/* end of burger making */

.hidden {
    display: none;
}

.patty {
    padding: 12px 16px;
    text-decoration: none;
    display: block;

    font-style: normal;
    font-weight: 500;
    font-size: 24px;
    text-align: center;
    line-height: 28px;
    color: #000000;
}

.patty:hover {
    background-color: #CC0000;
    color: white;
}

.visible {
    display: unset;
}

